syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.inventory";
option java_outer_classname = "InventoryProto";

package inventory;

service InventoryService {
  rpc CheckAvailability(BulkProductRequest) returns (BulkProductResponse);
}

message BulkProductRequest {
  repeated ProductRequestItem items = 1;
}

message ProductRequestItem {
  int64 product_id = 1;
  int32 requested_quantity = 2;
}

message BulkProductResponse {
  repeated ProductResponseItem available_items = 1;
  repeated ProductResponseItem unavailable_items = 2;
}

message ProductResponseItem {
  int64 product_id = 1;
  string name = 2;
  int32 available_quantity = 3;
  double price = 4;
  double sale = 5;
  bool is_available = 6;
  int32 requested_quantity = 7;
}